Updated feedback to always show comment box
Updated feedback to always show comment box, and display thank you message upon sending feedback

--- a/platforms/ios/install/index.html
+++ b/platforms/ios/install/index.html
@@ -1388,14 +1388,15 @@ NSDictionary <span style="font-weight:bold">*</span>volatileDataSources <span st
 		<button enabled id="feedback_yes" class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-green link">Yes</button>
 	  <button enabled id="feedback_no" class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-green link">No</button>
   </span>
-	<span id="feedback_comment" style="display:none">
-	  <br/>
-		<strong>Tell us how we can make this article better (Optional):</strong>
-		<textarea id="feedback_textarea" rows="4" cols="70"></textarea>
-		<button enabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-blue link">Submit</button>
-	</span>
+	<span id="feedback_comment">
+		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better..." rows="4" cols="70"></textarea>
+		<button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc ttu mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button>
+  </span>
+  <span id="feedback_thank_you" style="display: none;">
+     <em>Thank you for your feedback!</em>
+  </span>
 </div>
-<p>This page was last updated: June 25, 2019</p>
+<p> This page was last updated: June 25, 2019</p>
 
       
 
