updating docs cleanup on preview
updating docs cleanup on preview

--- a/platforms/ios-swift/index.html
+++ b/platforms/ios-swift/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
      
-    <title>Overview | Preview of Tealium Developer Docs</title>
+    <title>Tealium for iOS (Swift) | Preview of Tealium Developer Docs</title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
 
@@ -1208,7 +1208,7 @@ var utag_data = {
     <div class="w-100 w-80-l ph0 ph4-l">
       <article class="w-100 nested-copy-line-height nested-links nested-img">
         <h1 class="mid-gray f2">
-          Overview
+          Tealium for iOS (Swift)
         </h1>
         <div class=" mid-gray f5 f4-l">
           <p>Tealium SDK for Apple platforms using iOS (Swift).</p>
