--- a/platforms/android-java/wear/index.html
+++ b/platforms/android-java/wear/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
      
-    <title>Android Wear | Overview |Preview of Tealium Developer Docs</title>
+    <title>Android Wear | Tealium for Android (Java) |Preview of Tealium Developer Docs</title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
 
