--- a/platforms/ios-swift/feature-comparison/index.html
+++ b/platforms/ios-swift/feature-comparison/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
      
-    <title>Feature Comparison | Overview |Preview of Tealium Developer Docs</title>
+    <title>Feature Comparison | Tealium for iOS (Swift) |Preview of Tealium Developer Docs</title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
 
