--- a/platforms/react-native/release-notes/index.html
+++ b/platforms/react-native/release-notes/index.html
@@ -234,7 +234,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-0-5-1-0-6-september-2019">1.0.5 - 1.0.6 (September 2019)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-0-7-november-2019">1.0.7 (November 2019)</a></li>
+              <li><a href="#1-0-5-1-0-6-september-2019">1.0.5 - 1.0.6 (September 2019)</a></li>
               <li><a href="#1-0-3-1-0-4-march-2019">1.0.3 - 1.0.4 (March 2019)</a></li>
               <li><a href="#1-0-2-february-2019">1.0.2 (February 2019)</a></li>
               <li><a href="#1-0-1-february-2019">1.0.1 (February 2019)</a></li>
@@ -275,6 +276,17 @@ var utag_data = {
 
 
 <p>Below is a complete list of changes for each release of the React Native library.</p>
+
+<h2 id="1-0-7-november-2019">1.0.7 (November 2019)</h2>
+
+<p><strong>High Impact Changes</strong>
+* Support for ReactNative Autolinking in 0.60 and above
+* Better support for nested event data specifically for Android platform
+* Underlying Tealium libraries updated to versions 5.5.5 (Android) and 5.6.3 (iOS)
+* Bug Fixes
+    * Corrected method signature for Tealium.getPersistentData(key, callback)
+    * Build errors in iOS relating to Vdata/Event enums have been fixed
+    * Fixed crashes on some iPad versions (only when using TealiumIOS pod v5.6.0/5.6.1)</p>
 
 <h2 id="1-0-5-1-0-6-september-2019">1.0.5 - 1.0.6 (September 2019)</h2>
 
@@ -1333,7 +1345,7 @@ var utag_data = {
      <em>Thank you for your feedback!</em>
   </span>
 </div>
-<p>This page was last updated:  October 29, 2019 </p>
+<p>This page was last updated:  November 1, 2019 </p>
 
       
 
