Updated all TLC links and remove acryonym UDH/CDH
Updated all TLC links and remove acryonym UDH/CDH

--- a/platforms/csharp/track/index.html
+++ b/platforms/csharp/track/index.html
@@ -327,7 +327,7 @@ instance.JoinTrace(<span style="color:#b84">&#34;TRACE_ID&#34;</span>);
 <span style="color:#998;font-style:italic">//...
 </span><span style="color:#998;font-style:italic"></span>instance.KillTraceSession();
 </code></pre></div>
-<p>The <code>KillTraceSession()</code> method triggers an event to kill/end the visitor trace session at the server. This is useful for testing end-of-visit behavior in your CDH configuration.</p>
+<p>The <code>KillTraceSession()</code> method triggers an event to kill/end the visitor trace session at the server. This is useful for testing end-of-visit behavior in your Customer Data Hub configuration.</p>
 
 <p>The method also calls the <a href="/platforms/csharp/api/#leavetrace"><code>LeaveTrace()</code></a> method to remove the expired <code>tealium_trace_id</code> and stop any more events being sent with the previous trace ID.</p>
 
@@ -1398,7 +1398,7 @@ instance.JoinTrace(<span style="color:#b84">&#34;TRACE_ID&#34;</span>);
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
