--- a/platforms/getting-started/consent-management/index.html
+++ b/platforms/getting-started/consent-management/index.html
@@ -306,14 +306,14 @@ var utag_data = {
 <ul>
 <li>Queued events are sent.</li>
 <li>Consent state is stored permanently, and is checked each time a new tracking call is made.</li>
-<li>If <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Consent-Change-Event-Specifications/ta-p/23213">Consent Logging</a> is enabled, an event is sent to track the user&rsquo;s consent state for auditing purposes only.</li>
+<li>If <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Consent-Change-Event-Specifications/ta-p/23213">Consent Logging</a> is enabled, an event is sent to track the user&rsquo;s consent state for auditing purposes only.</li>
 </ul>
 
 <h3 id="partial-consent-by-category">Partial Consent (by category)</h3>
 
 <ul>
 <li>If the user has only consented to specific categories, these categories are respected when tags or connectors are fired in Tealium iQ and EventStream.</li>
-<li>If <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Consent-Change-Event-Specifications/ta-p/23213">Consent Logging</a> is enabled, an event is sent to track the user&rsquo;s consent preferences for auditing purposes only.</li>
+<li>If <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Consent-Change-Event-Specifications/ta-p/23213">Consent Logging</a> is enabled, an event is sent to track the user&rsquo;s consent preferences for auditing purposes only.</li>
 </ul>
 
 <h3 id="decline-consent">Decline Consent</h3>
@@ -321,7 +321,7 @@ var utag_data = {
 <ul>
 <li>All queued tracking calls are  purged.</li>
 <li>All future tracking calls are ignored.</li>
-<li>No events are sent to the CDH. Declined consent state are not tracked in the CDH.</li>
+<li>No events are sent to the Customer Data Hub. Declined consent state are not tracked in the Customer Data Hub.</li>
 </ul>
 
 <h2 id="available-actions">Available Actions</h2>
@@ -1410,7 +1410,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
