--- a/platforms/getting-started/server-side/index.html
+++ b/platforms/getting-started/server-side/index.html
@@ -284,13 +284,13 @@ var utag_data = {
 <li>Native Collect Module in your app</li>
 </ul>
 
-<p>Once added, Tealium Collect sends HTTPS requests to the CDH data collection servers for use with the following server-side products:</p>
+<p>Once added, Tealium Collect sends HTTPS requests to the Customer Data Hub data collection servers for use with the following server-side products:</p>
 
 <ul>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-EventStream/tkb-p/13">EventStream</a></li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started-with-AudienceStream/tkb-p/15">AudienceStream</a></li>
-<li><a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Introduction-to-DataAccess/ta-p/15611">EventStore</a></li>
-<li><a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Working-with-AudienceDB-and-EventDB/ta-p/17489">AudienceDB &amp; EventDB</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-DataAccess/ta-p/15611">EventStore</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Working-with-AudienceDB-and-EventDB/ta-p/17489">AudienceDB &amp; EventDB</a></li>
 </ul>
 
 <p>Tealium Collect offers many benefits to a mobile application. If you have EventStream and the Collect module installed, then third-party vendor SDK&rsquo;s may be removed from your app and implemented as server-side connectors instead. Offloading vendors to an API hub such as EventStream helps to reduce app size, minimize network traffic, and conserve battery power on the device.</p>
@@ -306,7 +306,7 @@ var utag_data = {
 <li>Data layer customization using extensions in iQ</li>
 </ul>
 
-<p><a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Tealium-Collect-Tag-Setup-Guide/ta-p/11923">How to set up the Tealium Collect Tag</a>.</p>
+<p><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Tealium-Collect-Tag-Setup-Guide/ta-p/11923">How to set up the Tealium Collect Tag</a>.</p>
 
 <h3 id="native-module">Native Module</h3>
 
@@ -323,7 +323,7 @@ var utag_data = {
 
 <h3 id="data-layer-enrichment">Data Layer Enrichment</h3>
 
-<p>AudienceStream offers the added benefit of returning visitor profile data to Tealium Collect with a feature called <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Data-Layer-Enrichment-Public-API/ta-p/155">Data Layer Enrichment (DLE)</a>. In the Collect module, use DLE to personalize your app based on the returned visitor attributes. In the Collect tag, the visitor attributes from DLE are made available in the data layer that runs inside the hidden webview.</p>
+<p>AudienceStream offers the added benefit of returning visitor profile data to Tealium Collect with a feature called <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Layer-Enrichment-Public-API/ta-p/155">Data Layer Enrichment (DLE)</a>. In the Collect module, use DLE to personalize your app based on the returned visitor attributes. In the Collect tag, the visitor attributes from DLE are made available in the data layer that runs inside the hidden webview.</p>
 
 </div>
 
