--- a/platforms/ios-objective-c/install/index.html
+++ b/platforms/ios-objective-c/install/index.html
@@ -283,7 +283,7 @@ var utag_data = {
 <li>Xcode 7 and higher</li>
 <li>Compatible with iOS 8.1 and higher</li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium CDH)</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium Customer Data Hub)</li>
 </ul>
 
 <h2 id="samples-apps">Samples Apps</h2>
@@ -439,7 +439,7 @@ tealConfig.logLevel = .prod</code></pre></div>
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>(Optional) Tealium data source key from CDH</td>
+<td>(Optional) Tealium data source key from Customer Data Hub</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 
@@ -1520,7 +1520,7 @@ tealConfig.logLevel = .prod</code></pre></div>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
