--- a/platforms/ios-objective-c/tag-management/index.html
+++ b/platforms/ios-objective-c/tag-management/index.html
@@ -338,7 +338,7 @@ tealConfig.view <span style="font-weight:bold">=</span> <span style="font-weight
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>(Optional) Tealium data source key from CDH (Set to <code>null</code> if none)</td>
+<td>(Optional) Tealium data source key from Customer Data Hub (Set to <code>null</code> if none)</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
@@ -1458,7 +1458,7 @@ tealConfig.view <span style="font-weight:bold">=</span> <span style="font-weight
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
