--- a/platforms/ios-swift/install/index.html
+++ b/platforms/ios-swift/install/index.html
@@ -354,7 +354,7 @@ target <span style="color:#b84">&#39;CPodTest&#39;</span> <span style="font-weig
     <span style="color:#998;font-style:italic"># All platforms. Provides important info about</span>
     <span style="color:#998;font-style:italic"># the app bundle.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumAppData&#34;</span>
-    <span style="color:#998;font-style:italic"># All platforms. Sends data to CDH.</span>
+    <span style="color:#998;font-style:italic"># All platforms. Sends data to Customer Data Hub.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumCollect&#34;</span>
     <span style="color:#998;font-style:italic"># All platforms. Assists with GDPR/privacy compliance.</span>
     pod <span style="color:#b84">&#34;tealium-swift/TealiumConsentManager&#34;</span>
@@ -1564,7 +1564,7 @@ target <span style="color:#b84">&#39;CPodTest&#39;</span> <span style="font-weig
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
