--- a/platforms/amp/install/index.html
+++ b/platforms/amp/install/index.html
@@ -277,7 +277,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
+<li>Tealium <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub</a> account</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -331,7 +331,7 @@ var utag_data = {
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>Tealium data source key from CDH</td>
+<td>Tealium data source key from Customer Data Hub</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
@@ -1457,7 +1457,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
