--- a/platforms/amp/track/index.html
+++ b/platforms/amp/track/index.html
@@ -320,7 +320,7 @@ var utag_data = {
 <tr>
 <td><code>datasource</code></td>
 <td><code>String</code></td>
-<td>Tealium data source key from CDH</td>
+<td>Tealium data source key from Customer Data Hub</td>
 <td><code>&quot;abc123&quot;</code></td>
 </tr>
 </tbody>
@@ -1437,7 +1437,7 @@ Button Text
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
