--- a/platforms/android-java/data-layer/index.html
+++ b/platforms/android-java/data-layer/index.html
@@ -264,7 +264,7 @@ var utag_data = {
 
 
 <div class="prose" id="prose">
-  <p>The following variables are populated by the Tealium Android Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and are useable in your CDH configuration.</p>
+  <p>The following variables are populated by the Tealium Android Library as part of the mobile data layer. These variables are included automatically in each tracking call from the library and are useable in your Customer Data Hub configuration.</p>
 
 <p class="note">These variables are added to your iQ Tag Management account when you <a href="https://community.tealiumiq.com/t5/Mobile-Libraries/Creating-a-Mobile-Profile/ta-p/16328">activate the profile for mobile use</a>.</p>
 
@@ -1812,7 +1812,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
