--- a/platforms/android-java/tv/index.html
+++ b/platforms/android-java/tv/index.html
@@ -285,7 +285,7 @@ var utag_data = {
 <li>Android (Lollipop/5.0+ / API Level 21+ for Android TV)</li>
 <li>Android (Lollipop/5.1+ / API Level 22+ for Fire TV)</li>
 <li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium CDH)</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Customer Data Hub account</a> (if using Tealium Customer Data Hub)</li>
 </ul>
 
 <h2 id="api-reference">API Reference</h2>
@@ -1393,7 +1393,7 @@ Tealium.<span style="color:#008080">getInstance</span>(<span style="color:#b84">
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
