--- a/platforms/http-api/data-layer/index.html
+++ b/platforms/http-api/data-layer/index.html
@@ -296,7 +296,7 @@ var utag_data = {
 
 <tr>
 <td><code>tealium_datasource</code></td>
-<td>(Optional) The data source key from CDH (<a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources)</td>
+<td>(Optional) The data source key from Customer Data Hub (<a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources)</td>
 </tr>
 
 <tr>
@@ -311,7 +311,7 @@ var utag_data = {
 
 <tr>
 <td><code>tealium_trace_id</code></td>
-<td>(Optional) For use with <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Trace/ta-p/12058">Trace</a></td>
+<td>(Optional) For use with <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Trace/ta-p/12058">Trace</a></td>
 </tr>
 </tbody>
 </table>
@@ -320,7 +320,7 @@ var utag_data = {
 
 <h2 id="custom-event-parameters">Custom Event Parameters</h2>
 
-<p>Additional event attributes are sent as custom parameters according to your tracking needs. Define these parameters as <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Using-Attributes/ta-p/11926">event attributes in the CDH</a>.</p>
+<p>Additional event attributes are sent as custom parameters according to your tracking needs. Define these parameters as <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Using-Attributes/ta-p/11926">event attributes in the Customer Data Hub</a>.</p>
 
 </div>
 
@@ -1378,7 +1378,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
