--- a/platforms/ios-swift/feature-comparison/index.html
+++ b/platforms/ios-swift/feature-comparison/index.html
@@ -381,7 +381,7 @@ var utag_data = {
 <td>Tealium Collect</td>
 <td>✔</td>
 <td>✔</td>
-<td>Sends data to Tealium&rsquo;s CDH using a native HTTPS request</td>
+<td>Sends data to Tealium&rsquo;s Customer Data Hub using a native HTTPS request</td>
 <td></td>
 </tr>
 
@@ -1582,7 +1582,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
