--- a/platforms/ios-swift/module-list/datasource/index.html
+++ b/platforms/ios-swift/module-list/datasource/index.html
@@ -282,7 +282,7 @@ var utag_data = {
 
 <p>The DataSource Module adds the data source variable to each dispatch.</p>
 
-<p>Usage of this module is recommended if you are using the CDH. Generate a data source key via the CDH user interface. If you are using Tag Management only, it currently doesn&rsquo;t have any effect, apart from adding a new variable to each dispatch. <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources.</p>
+<p>Usage of this module is recommended if you are using the Customer Data Hub. Generate a data source key via the Customer Data Hub user interface. If you are using Tag Management only, it currently doesn&rsquo;t have any effect, apart from adding a new variable to each dispatch. <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Sources/ta-p/17933">Learn more</a> about Data Sources.</p>
 
 <p>The following platforms are supported:</p>
 
@@ -1422,7 +1422,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
