--- a/platforms/ios-swift/module-list/visitor-service/index.html
+++ b/platforms/ios-swift/module-list/visitor-service/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 
 <h2 id="usage">Usage</h2>
 
-<p>The VisitorService module implements the <a href="https://community.tealiumiq.com/t5/Universal-Data-Hub/Data-Layer-Enrichment/ta-p/684">Data Layer Enrichment</a> feature of the CDH.</p>
+<p>The VisitorService module implements the <a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Data-Layer-Enrichment/ta-p/684">Data Layer Enrichment</a> feature of the Customer Data Hub.</p>
 
 <p>Usage of this module is recommended if you are licensed for Tealium AudienceStream and would like to use the visitor profile to enhance the user experience in your mobile application. If you are not licensed for Tealium AudienceStream, usage of this module is not recommended as no visitor profile is returned.</p>
 
@@ -2226,7 +2226,7 @@ config.setVisitorServiceRefresh(<span style="color:#099">3</span>)</code></pre><
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 16, 2020 
+    <span>This page was last updated:  January 23, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
